# snrlab-chip-network-sim

./: .gitattributes  .gitignore  README.md  kgosine_202505_b.ipynb
chip_network_sim/: .gitignore  AGENTS.md  BENCHMARKS.md  CMakeLists.txt  DEVELOPMENT.md  README.md  VERILATOR_FEASIBILITY.md
chip_network_sim/.github/workflows/: larpix-visualizer-pages.yml
chip_network_sim/config/: network_1x2_priority_loss_test.json  network_2x2.json  network_2x2_custom_routes.json  network_2x2_single_packet_br_to_tr_all4.json  network_3x4_snake_to_top_left.json  network_3x5_congestion_wave_br_to_tl.json  network_3x5_determinism_snake_br_to_tl.json
chip_network_sim/dev_journals/: kgosine_202603_architecture.ipynb  kgosine_202603_architecture.ipynb 
chip_network_sim/doc/: ARCHITECTURE_PDF.md  Doxyfile  Makefile  README.md  architecture.md  mermaid-header.html  packet_trace_plan.md  pandoc-pdf.yaml  pandoc.css  pandoc.yaml
chip_network_sim/include/chipsim/: fifo.h  protocol.h  trace.h
chip_network_sim/larpix_network_sim/: CHIP_ID_BOOTSTRAP_SCRIPT_PLAN.md  CURRENT_RTL_ROUTING_CONFIGURABILITY.md  LARPIX_NETWORK_ARCHITECTURE_PLAN.md
chip_network_sim/larpix_network_sim/config/: CONFIGURATION_TESTS.md  OCCUPANCY_NOTES.md  startup_1chip_event_source.json  startup_1chip_full_reg_readback.json  startup_3x5_bootstrap_chip_ids.json  startup_3x5_event_top_right.json  stimulus_1chip_event_source.json  stimulus_3x5_event_top_right.json
chip_network_sim/larpix_network_sim/include/chipsim/: protocol.h  trace.h
chip_network_sim/larpix_network_sim/include/larpixsim/: backend.h  trace_protocol.h
chip_network_sim/larpix_network_sim/scripts/: bootstrap_id_protocol_sim.py  compile_startup_json.py  generate_1chip_full_reg_readback_json.py  generate_bootstrap_chip_id_readback_json.py  generate_bootstrap_event_startup_json.py  generate_bootstrap_startup_json.py  larpix_uart.py  rtl_config_defaults.py  run_1chip_event_startup.sh  run_1chip_fullreg_readback_startup.sh  run_3x5_bootstrap_id_startup.sh  run_3x5_event_top_right.sh
chip_network_sim/larpix_network_sim/src/: analog_core_model.cpp  analog_core_model.h  chip_larpix.cpp  fpga_larpix.cpp  larpix_cosim_backend.cpp  orchestrator_larpix.c  trace_collector_larpix.c
chip_network_sim/larpix_network_sim/visualizers/: GITHUB_PAGES.md  PACKET_TRANSMISSION_VISUALIZER_SPEC.md  VISUALIZER_STATUS.md
chip_network_sim/larpix_network_sim/visualizers/packet_transmission/: convert_live_bootstrap_log_to_playback.py  index.html  main.js  style.css
chip_network_sim/larpix_v3b/: .gitignore  DIGITAL_CORE_EVENT_FLOW.md  README.md
chip_network_sim/larpix_v3b/cpp/: analog_core_model.cpp  analog_core_model.h  digital_core_cosim_harness.cpp
chip_network_sim/larpix_v3b/modelsim/: analog_core_tb.do  broadcast_read.do  channel_ctrl_tb.do  channel_ctrl_wip_tb.do  comms_ctrl_tb.do  compile_postpar.do  compile_postpar.do_ORIG  compile_reflibs.do  compile_src.do  compile_src_coverage.do  compile_src_v.do  compile_syn.do  date_file  debug_wave.do  digital_core.rtl.saif  digital_core_power.saif  digital_core_tb.do  event_builder_tb.do  external_interface_tb.do  fifo_burst_tb.do  fifo_tb.do  fifo_tb_wave.do  gen_config.pl  larpix_hydra_par_tb.do  larpix_hydra_tb.do  larpix_single_tb.do  larpix_tb.do  larpix_tb_wave.do  lightpix_debug_wave.do  lightpix_event_tb.do  lightpix_event_tb_wave.do  lightpix_fifo_wave.do  lightpix_reset_tb.do  minimal_wave.do  modelsim.ini  now_in_seconds  processor_bugs_tb.do  processor_bugs_tb_wave.do  processor_tb_wave.do  reset_debug.do  (+20 more)
chip_network_sim/larpix_v3b/src/: async2sync.sv  channel_ctrl.sv  comms_ctrl.sv  config_regfile.sv  config_regfile_assign.sv  digital_core.sv  digital_monitor.sv  event_router.sv  external_interface.sv  fifo_latch.sv  gate_negedge_clk.sv  gate_posedge_clk.sv  hydra_ctrl.sv  larpix_constants.sv  periodic_pulser.sv  priority_fifo_arbiter.sv  priority_onehot.sv  reset_sync.sv  sage-x_tsmc_cl018g_rvt_neg.v.rlnk  sar_adc_cdc.sv  timestamp_gen.sv  tsmc18_cg_neg.v.rlnk  uart.sv  uart_rx.sv  uart_tx.sv
chip_network_sim/larpix_v3b/testbench/: digital_core_tb.v  larpix_tb.v  larpix_tb.v.save
chip_network_sim/larpix_v3b/testbench/analog_core/: analog_channel.sv  analog_core.sv  csa.sv  discriminator.sv  sar_async_adc.sv
chip_network_sim/larpix_v3b/testbench/cosim/: COSIM_TESTBENCHES.md  digital_core_cosim_config_tb.cpp  digital_core_cosim_order_tb.cpp
chip_network_sim/larpix_v3b/testbench/larpix_tasks/: analog_tasks.sv  channel_tests.sv  larpix_constants.sv  larpix_tasks_top.sv  shadow_regfile_assign.sv  uart_tasks.sv  uart_tests.sv
chip_network_sim/larpix_v3b/testbench/larpix_v3/: larpix.v  larpix_v2.sv  larpix_v2b.sv  larpix_v2c.sv  larpix_v3.sv  larpix_v3b.sv  lightpix.sv
chip_network_sim/larpix_v3b/testbench/mcp/: cds_minimal.mcp  config_path.mcp  config_test.mcp  ext_trig.mcp  ext_trig_debug.mcp  ext_trig_short.mcp  fifo_debug.mcp  hardwired_test.mcp  hydra_broadcast_read.mcp  hydra_clk_debug.mcp  hydra_external_trigger.mcp  hydra_larpix.mcp  larpix_mailbox.mcp  larpix_minimal.mcp  larpix_minimal_VCD.mcp  larpix_tally.mcp  larpix_wait.mcp  mcp.sv  mcp_external_interface.sv  mcp_larpix_hydra.sv  mcp_larpix_single.sv  mcp_lightpix_single.sv  per_trig_debug.mcp  sanity_check.mcp  single_larpix.mcp  uart_debug.sv  v3_bringup.mcp
chip_network_sim/nifty-routing-board-game/: .gitignore  Makefile  README.md  app_wasm.c  game.c  game.h  index.html  main.js  main.wasm  rl_demo.c
chip_network_sim/rtl/: chip_fifo_router.sv
chip_network_sim/scripts/: chip_wrapper.py  export_fifo_contents.py  lint_digital_core_verilator.sh  plot_chip_output_waveforms.py  plot_chip_output_waveforms_fifo.py  reconstruct_trace.py  run_congestion_wave_3x5.py  run_determinism_3x5.sh  run_digital_core_cosim_charge_test.sh  run_digital_core_cosim_config_test.sh  run_digital_core_cosim_order_test.sh  run_digital_core_smoke_tb.sh  run_from_config.py  run_gate_clk_tb.sh
chip_network_sim/src/: chip.c  chip_rtl.cpp  fifo.c  orchestrator.c  protocol.c  trace.c
chip_network_sim/tests/: test_fifo.c
dev_journals/: README.md  (+20 more)
(+132 files in other folders)
